configurable stream restart delay.  trim trailing punctuation.  show tweet rates.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,7 @@ twitter {
   consumer-secret = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
   access-token = "yyyyyyyyyyyyyyyyyy-yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy"
   access-token-secret = "zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+  stream-restart-delay-in-msec = 10000
 }
 
 spark {
@@ -17,4 +18,3 @@ filter {
 hashtag {
   top-N = 10
 }
-  
